--- a/cmpf_msgs/CMakeLists.txt
+++ b/cmpf_msgs/CMakeLists.txt
@@ -2,18 +2,17 @@ cmake_minimum_required(VERSION 3.0.2)
 project(cmpf_msgs)
 
 find_package(catkin REQUIRED COMPONENTS 
-    actionlib 
-    std_msgs
-    nav_msgs
-    message_generation
+  actionlib 
+  std_msgs
+  geometry_msgs
+  message_generation
 ) 
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  TrajectoryMsg.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -24,15 +23,15 @@ find_package(catkin REQUIRED COMPONENTS
 
 ## Generate actions in the 'action' folder
 add_action_files(
-    FILES
-    Trajectory.action
+  FILES
+  Trajectory.action
 )
 
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
 	DEPENDENCIES
 	std_msgs
-	nav_msgs
+	geometry_msgs
 	actionlib_msgs
 )
 
@@ -40,7 +39,7 @@ catkin_package(
 	CATKIN_DEPENDS 
   actionlib_msgs 
   std_msgs 
-  nav_msgs
+  geometry_msgs
   message_runtime
 )
 
