--- a/cmpf_path_tracking_controller/cmpf_controller_server/CMakeLists.txt
+++ b/cmpf_path_tracking_controller/cmpf_controller_server/CMakeLists.txt
@@ -31,7 +31,10 @@ include_directories(
 add_library(${PROJECT_NAME}_nodelet
   src/controller_server_nodelet.cpp
 )
-
+add_dependencies(${PROJECT_NAME}_nodelet 
+  ${${PROJECT_NAME}_EXPORTED_TARGETS} 
+  ${catkin_EXPORTED_TARGETS}
+)
 target_link_libraries(${PROJECT_NAME}_nodelet
   ${catkin_LIBRARIES}
 )
