--- a/cmpf_core/package.xml
+++ b/cmpf_core/package.xml
@@ -6,7 +6,7 @@
 
   <maintainer email="mlsdphonethk@gmail.com">Phone Thiha Kyaw</maintainer>
 
-  <license>TODO</license>
+  <license>Apache-2.0</license>
 
   <author email="mlsdphonethk@gmail.com">Phone Thiha Kyaw</author>
 
