--- a/cmpf_msgs/package.xml
+++ b/cmpf_msgs/package.xml
@@ -6,7 +6,7 @@
 
   <maintainer email="mlsdphonethk@gmail.com">Phone Thiha Kyaw</maintainer>
 
-  <license>TODO</license>
+  <license>Apache-2.0</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>actionlib_msgs</build_depend>
