--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,13 @@
 name: CI
 
-on: [push, pull_request]
+on: 
+  # direct pushes to protected branches are not supported
+  pull_request:
+  schedule:
+    # 7am UTC, 12am PDT
+    - cron:  '0 7 * * *'
+  # allow manually starting this workflow
+  workflow_dispatch:
 
 jobs:
   industrial_ci:
