--- a/cmpf_common/lanelet2_map_server/CMakeLists.txt
+++ b/cmpf_common/lanelet2_map_server/CMakeLists.txt
@@ -58,6 +58,10 @@ install(TARGETS
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+)
+
 install(FILES 
   lanelet2_map_server_nodelet_plugin.xml
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
