--- a/cmpf_route_planner/CMakeLists.txt
+++ b/cmpf_route_planner/CMakeLists.txt
@@ -60,6 +60,10 @@ install(TARGETS
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+)
+
 install(FILES 
   cmpf_route_planner_nodelet_nodelet_plugin.xml
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
