--- a/cmpf_msgs/CMakeLists.txt
+++ b/cmpf_msgs/CMakeLists.txt
@@ -14,6 +14,8 @@ add_message_files(
   FILES
   TrajectoryMsg.msg
   Lanelet2MapBin.msg
+  Waypoint.msg
+  Route.msg
 )
 
 ## Generate services in the 'srv' folder
