--- a/cmpf_behavior_tree/CMakeLists.txt
+++ b/cmpf_behavior_tree/CMakeLists.txt
@@ -48,6 +48,9 @@ list(APPEND bt_plugin_libs cmpf_compute_route_action_client_bt_node)
 add_library(cmpf_compute_trajectory_bt_action_client_node plugins/compute_trajectory_bt_action_client.cpp)
 list(APPEND bt_plugin_libs cmpf_compute_trajectory_bt_action_client_node)
 
+add_library(cmpf_rate_controller_bt_node plugins/rate_controller.cpp)
+list(APPEND bt_plugin_libs cmpf_rate_controller_bt_node)
+
 foreach(bt_plugin ${bt_plugin_libs})
   add_dependencies(${bt_plugin}
     ${${PROJECT_NAME}_EXPORTED_TARGETS} 
